@@ -101,7 +101,7 @@ RELATED_LINKS - related links (if any)
 -->
 <div class="tx-irfaq-pi1">
 	<p>
-		<a href="javascript:toggleAll(true, '###HASH###', ###COUNT###);">###TEXT_SHOW###</a>/<a href="javascript:toggleAll(false, '###HASH###', ###COUNT###);">###TEXT_HIDE###</a>
+		<a href="javascript:tx_irfaq_toggleAll(true, '###HASH###', ###COUNT###);">###TEXT_SHOW###</a> / <a href="javascript:tx_irfaq_toggleAll(false, '###HASH###', ###COUNT###);">###TEXT_HIDE###</a>
 	</p>
 
 	<dl>
@@ -111,11 +111,11 @@ RELATED_LINKS - related links (if any)
 		<!-- ###FAQ### begin
 			Template for a single FAQ item
 		-->
-		<dt onclick="toggleFaq('###FAQ_ID###', ###SINGLE_OPEN###, '###HASH###')" style="cursor: pointer;">
+		<dt onclick="tx_irfaq_toggleFaq('###FAQ_ID###', ###SINGLE_OPEN###, '###HASH###')" class="tx-irfaq-dynheader">
 			###FAQ_PM_IMG### ###FAQ_Q###
-			<div style="clear: left; height: 1px"></div>
+			<div class="tx-irfaq-cleaner"></div>
 		</dt>
-		<dd id="irfaq_a_###FAQ_ID###_###HASH###" style="display: none;">
+		<dd id="irfaq_a_###FAQ_ID###_###HASH###" class="tx-irfaq-dynans-hidden">
 			###FAQ_A###
 			<div class="additional-info">
 				###TEXT_CATEGORY### ###FAQ_CATEGORY###
