@@ -9,3 +9,8 @@
 .tx-irfaq-pi1 dd p { margin-top: 0px;	}
 .tx-irfaq-pi1 .additional-info { border-top: 2px solid #e6e6e6; margin-bottom: 10px; }
 .tx-irfaq-pi1 .irfaq-related-faq, .tx-irfaq-pi1 .irfaq-related-links { padding-top: 0px; padding-bottom: 0px; margin-top: 3px; margin-bottom: 15px; }
+
+.tx-irfaq-cleaner { clear: left; height: 1px; }
+.tx-irfaq-dynheader { cursor: pointer; }
+.tx-irfaq-dynans-hidden { display: none; }
+.tx-irfaq-dynans-visible { display: inline; }
