@@ -4,40 +4,36 @@
  * @param id 		the id of the FAQ item to hide or show
  * @param single	true to show only one item at a time, false the open as many as you want
  */
-function toggleFaq(id, single, hash) {	
-		
-	if(single) {
-		//show only one Q+A at a time
-		toggleAll(false, hash);		
+function tx_irfaq_toggleFaq(id, single, hash) {
+
+	if (single) {
+		// show only one Q+A at a time
+		toggleAll(false, hash);
 		showHideFaq(id, true, hash);
 	}
 	else {
-		//open as many Q+A as you like		
-		if(document.getElementById('irfaq_a_'+id+'_'+hash).style.display == 'none') {
-			showHideFaq(id, true, hash);
-		}
-		else {
-			showHideFaq(id, false, hash);
-		}			
-	}	
+		// open as many Q+A as you like
+		var hidden = (document.getElementById('irfaq_a_'+id+'_'+hash).className == 'tx-irfaq-dynans-hidden');
+		showHideFaq(id, hidden, hash);
+	}
 }
 
 /**
  * shows or hides a FAQ item at a time depending on the given status
  *
  * @param id 		the id of the FAQ item to hide or show
- * @param status	true to show the item, false to hide it
+ * @param show	true to show the item, false to hide it
  */
-function showHideFaq(id, status, hash) {
+function tx_irfaq_showHideFaq(id, show, hash) {
 	var faq_id = 'irfaq_a_'+id+'_'+hash; //answer
 	var pm_id  = 'irfaq_pm_'+id+'_'+hash; // plus/minus icon
-	
-	if(status) {
-		document.getElementById(faq_id).style.display = 'inline';
+
+	if (show) {
+		document.getElementById(faq_id).className = 'tx-irfaq-dynans-visible';
 		document.getElementById(pm_id).src = tx_irfaq_pi1_iconMinus;
 	}
 	else {
-		document.getElementById(faq_id).style.display = 'none';	
+		document.getElementById(faq_id).className = 'tx-irfaq-dynans-hidden';
 		document.getElementById(pm_id).src = tx_irfaq_pi1_iconPlus;
 	}
 }
@@ -47,8 +43,8 @@ function showHideFaq(id, status, hash) {
  *
  * @param mode	true to show the items, false to hide them
  */
-function toggleAll(mode, hash, count) {
-	for(i = 0; i < count; i++) {
+function tx_irfaq_toggleAll(mode, hash, count) {
+	for (i = 0; i < count; i++) {
 		showHideFaq(i+1, mode, hash);
-	}				
+	}
 }
